<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<!--Sonatype Parent POM-->
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>

	<!--
		Maven Information
	-->
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.brailleblaster</groupId>
	<artifactId>brailleblaster</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>

	<dependencies>
		<!-- Braille Translation -->
		<dependency>
			<groupId>org.brailleblaster</groupId>
			<artifactId>utd</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		
		<!-- Slf4j for logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.10</version>
		</dependency>
		<!-- Logback logging - slf4j implementation -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.2</version>
		</dependency>
		
		<!-- Xom for XML -->
		<dependency>
			<!-- group xom only has version 1.2.5 -->
			<groupId>com.io7m.xom</groupId>
			<artifactId>xom</artifactId>
			<version>1.2.10</version>
		</dependency>
		
		<!-- SWT -->
		<dependency>
			<groupId>org.eclipse.swt</groupId>
			<artifactId>org.eclipse.swt.win32.win32.x86</artifactId>
			<version>4.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.swt</groupId>
			<artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
			<version>4.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.swt</groupId>
			<artifactId>org.eclipse.swt.gtk.linux.x86</artifactId>
			<version>4.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.swt</groupId>
			<artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
			<version>4.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.swt</groupId>
			<artifactId>org.eclipse.swt.cocoa.macosx</artifactId>
			<version>4.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.swt</groupId>
			<artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId>
			<version>4.4</version>
			<scope>provided</scope>
		</dependency>
		
		<!-- Utils -->
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.3.2</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-exec</artifactId>
			<version>1.3</version>
		</dependency>
		
		<!-- MathML -->
		<dependency>
			<groupId>batik</groupId>
			<artifactId>batik-transcoder</artifactId>
			<version>1.6-1</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.jeuclid</groupId>
			<artifactId>jeuclid-swt</artifactId>
			<version>3.1.9</version>
		</dependency>
	</dependencies>
	
	<repositories>
		<!-- TODO: SWT is not in Maven Central but Google Code is going away -->
		<repository>
			<id>swt-repo</id>
			<url>https://swt-repo.googlecode.com/svn/repo/</url>
		</repository>
	</repositories>
	
	<build>
		<!--
			Limit fallout of maven port by using old directory locations
			TODO: Eventually move to standard src/main/java and src/main/resources
		-->
		<sourceDirectory>src/main</sourceDirectory>
		<resources>
			<resource>
				<directory>src/resources</directory>
			</resource>
		</resources>
		
		<plugins>
			<!--Specifically target Java 8-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>8</source>
					<target>8</target>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<compilerArgs>
						<arg>-Xlint:unchecked</arg>
						<arg>-Xlint:deprecation</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<!-- Run braileblaster -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.3.2</version>
				<configuration>
					<!-- TODO: Something in the XML parsing uses relative paths -->
					<workingDirectory>${basedir}\dist</workingDirectory>
					
					<!--exec:exec-->
					<executable>${env.JAVA_HOME}\bin\java</executable>
					<arguments>
						<argument>-classpath</argument>
						<classpath/>
						<argument>-Dlogback.configurationFile=programData/settings/logback.xml</argument>
						<argument>-DBBLASTER_WORK=${basedir}\dist</argument>
						<argument>org.brailleblaster.Main</argument>
					</arguments>
					
					<!-- exec:java - Cannot use until working directory doesn't need to be changed -->
					<!--
					<mainClass>org.brailleblaster.Main</mainClass>
					<systemProperties>
						<systemProperty>
							<key>BBLASTER_WORK</key>
							<value>${basedir}\dist</value>
						</systemProperty>
						<systemProperty>
							<key>logback.configurationFile</key>
							<value>programData/settings/logback.xml</value>
						</systemProperty>
					</systemProperties>
					-->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.10</version>
				<executions>
					<!-- Unpack liblouis tables to dist/programData/liblouis/tables -->
					<execution>
						<id>import-tables</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>unpack</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>org.bitbucket.mwhapples</groupId>
									<artifactId>jlouis</artifactId>
									<version>0.0.3-SNAPSHOT</version>
									<type>zip</type>
									<classifier>tables</classifier>
									<outputDirectory>dist/programData</outputDirectory>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
					<!-- Unpack all SWT jars to the right location -->
					<execution>
						<id>swt</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<stripVersion>true</stripVersion>
							<outputDirectory>dist/lib</outputDirectory>
							<includeGroupIds>org.eclipse.swt</includeGroupIds>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Make a unified super-jar with all the dependencies included -->
			<plugin>              
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<outputFile>${basedir}\dist\brailleblaster.jar</outputFile>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Main-Class>org.brailleblaster.Main</Main-Class>
										<!-- Need this for logback -->
										<Class-Path>programData/settings</Class-Path>
									</manifestEntries>                                                                      
								</transformer>
							</transformers>
							<artifactSet>
								<excludes>
									<exclude>org.eclipse.swt</exclude>
									<exclude>org.bitbucket.mwhapples:jlouis:zip:tables</exclude>
								</excludes>
							</artifactSet>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>

		